--- a/demo/activities/index.html
+++ b/demo/activities/index.html
@@ -91,7 +91,7 @@
         <div class="overlay" style="opacity: 0.5;"></div>
         <div class="text" style="align-items: center;" data-aos="fade-up">
           <h1 class="center">Activities</h1>
-          <p class="center">We invite you to relax, but if you also like to do stuff we're happy to provide options.</p>
+          <p class="center">We invite you to relax, but if you also like to do stuff we&rsquo;re happy to provide options.</p>
         </div>
       </section>
       <section id="content" class="row wide">
@@ -102,7 +102,7 @@
             </figure>
             <div class="text">
               <h2>Morning Jog &amp; Joe</h2>
-              <p>Every morning members of our staff get together for a morning jog around the grounds. Then we enjoy a cup of coffee together. It's a great way to start the day, and we invite our guests to also join us.</p>
+              <p>Every morning members of our staff get together for a morning jog around the grounds. Then we enjoy a cup of coffee together. It&rsquo;s a great way to start the day. You&rsquo;re welcome to join us. Ask us for more information.</p>
             </div>
           </div>
           <div class="media-grid-item reverse" data-aos="fade-up">
@@ -111,7 +111,7 @@
             </figure>
             <div class="text">
               <h2>On the Water</h2>
-              <p>Maine is littered with lakes, rivers, bays, coves, and saltwater marshes. We're happy to help organize kayaking, paddleboarding, and canoe trips.</p>
+              <p>Maine is littered with lakes, rivers, bays, coves, and saltwater marshes. We&rsquo;re happy to help organize kayaking, paddleboarding, and canoe trips.</p>
               <p><small>*Additional fees apply</small></p>
             </div>
           </div>
@@ -130,7 +130,7 @@
             </figure>
             <div class="text">
               <h2>Movie Nights</h2>
-              <p>Sometimes, when the weather is just right, we like to watch movies outside on the grounds of the hotel. We enjoy beers and special snacks from our taproom, and often get a couple of firepits going too.</p>
+              <p>Sometimes, when the weather is just right, we watch movies outside on the grounds of the hotel. We enjoy beers and special snacks from our taproom, and often get a couple of fire pits going too.</p>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
         <div class="text" data-aos="fade-up">
           <h2 class="center">Explore</h2>
-          <p class="center">Hiking, skiing, brewery tours, sailing, island hopping, and more&hellip; there's so much to do in Maine. Whatever fits your interest, we are here to help you explore like a local.</p>
+          <p class="center">Hiking, skiing, brewery tours, sailing, island hopping, and more&hellip; there&rsquo;s so much to do in Maine. Whatever fits your interest, we are here to help you explore like a local.</p>
         </div>
       </section>
       <section class="row wide">
