--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -93,7 +93,7 @@
         <div class="overlay" style="opacity: 0.5;"></div>
         <div class="text" data-aos="fade-up">
           <h1>Simple &amp; Delicious</h1>
-          <p>We're happy to provide a menu of delicious food and beverages that mirrors our passion for simplicity, quality, integrity, and taste.</p>
+          <p>We&rsquo;re pleased to provide a menu of delicious food and beverages that mirrors our passion for simplicity, quality, integrity, and taste.</p>
         </div>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
@@ -240,7 +240,7 @@
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
         <div class="text" data-aos="fade-up">
           <h2 class="center">Your Place or Ours</h2>
-          <p class="center">We invite you to join us in our taproom, or we'll happily deliver your food and beverages to your room.</p>
+          <p class="center">We invite you to join us in our taproom, or we&rsquo;ll happily deliver your food and beverages to your room.</p>
         </div>
       </section>
       <section class="row wide">
