--- a/demo/gather/index.html
+++ b/demo/gather/index.html
@@ -117,7 +117,7 @@
             </figure>
             <div class="text">
               <h2>Celebrations</h2>
-              <p>Whether it’s a wedding, a rehearsal dinner, a birthday party, or a reunion, we would love to help you celebrate.</p>
+              <p>Whether it&rsquo;s a wedding, a special dinner, a birthday party, a reunion, or whatever the occasion, we would love to help you celebrate.</p>
               <p style="line-height: 1.25;"><small>To book a celebration, please email us at <a href="#!">celebrate@thepinetreemotel.com</a>.</small></p>
             </div>
           </div>
@@ -127,7 +127,7 @@
             </figure>
             <div class="text">
               <h2>Photoshoots</h2>
-              <p>We've got lots of flexible options indoors and out that we think would create magical photography.</p>
+              <p>Need a special place with a variety of photogenic interiors and exteriors? We&rsquo;ve got lots of flexible options to help you create magical photography.</p>
               <p style="line-height: 1.25;"><small>To book a photoshoot, please email us at <a href="#!">photoshoots@thepinetreemotel.com</a>.</small></p>
             </div>
           </div>
