--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -89,25 +89,25 @@
         <div class="overlay" style="opacity: 0.5;"></div>
         <div class="text" style="align-items: center;" data-aos="fade-up">
           <h1 class="center">The Way Life Should Be</h1>
-          <p class="center">Inspired by the classic American roadside motor lodge, we've rebuilt The Pine Tree Motel into a comfortable, contemporary, and relaxing anytime getaway.</p>
+          <p class="center">Inspired by the classic American roadside motor lodge, The Pine Tree Motel is a comfortable, contemporary, and relaxing anytime getaway.</p>
         </div>
       </section>
       <section id="content" class="banner split border">
         <figure data-aos="fade-right">
-          <img src="../assets/images/tgc-pool-1x.jpg" srcset="../assets/images/tgc-pool-1x 1x, ../assets/images/tgc-pool-2x.jpg 2x" alt="Forested swimming pool with some old school inner tubes, deck chairs, and picnic tables">
+          <img src="../assets/images/about-01-1x.jpg" srcset="../assets/images/about-01-1x 1x, ../assets/images/about-01-2x.jpg 2x" alt="A hammock and a couple of chairs on a screened-in porch">
         </figure>
         <div class="text" data-aos="fade-left">
           <h2>Tranquility</h2>
-          <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, we've built this place to be your comfortable home away from home. Spend your entire visit relaxing on our grounds or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
+          <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, we&rsquo;ve imagined this place to be your comfortable home away from home. Spend your entire visit relaxing on our grounds, or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
         </div>
       </section>
       <section class="banner split reverse border">
         <figure data-aos="fade-left">
-          <img src="../assets/images/about-01-1x.jpg" srcset="../assets/images/about-01-1x 1x, ../assets/images/about-01-2x.jpg 2x" alt="A hammock and a couple of chairs on a screened-in porch">
+          <img src="../assets/images/tgc-pool-1x.jpg" srcset="../assets/images/tgc-pool-1x 1x, ../assets/images/tgc-pool-2x.jpg 2x" alt="Forested swimming pool with some old school inner tubes, deck chairs, and picnic tables">
         </figure>
         <div class="text" data-aos="fade-right">
           <h2>Comfort</h2>
-          <p>We're situated on 2 acres featuring a swimming pool, hammocks to lounge in, a fire pit, picnic area, and plenty of places to relax. Nestled right between Maine's eastern coastline and western mountains, The Pine Tree Motel is a perfect place to stay through all four seasons.</p>
+          <p>We&rsquo;re situated on two spacious forested acres featuring a swimming pool, hammocks, fire pits, picnic areas, and plenty of space to relax. Nestled right between Maine&rsquo;s eastern coastline and western mountains, The Pine Tree Motel is a perfect place to stay through all four seasons.</p>
         </div>
       </section>
       <section class="row wide">
