--- a/demo/index.html
+++ b/demo/index.html
@@ -233,7 +233,7 @@
             </figure></a>
             <div class="text">
               <h2>About Maine</h2>
-              <p>No matter what interests you, there's something for you do do here in Maine.</p>
+              <p>No matter what interests you, there&rsquo;s something for you do do here in Maine.</p>
               <p class="icon"><a href="https://visitmaine.com/" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
