--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -98,7 +98,7 @@
         </figure>
         <div class="text" data-aos="fade-left">
           <h2>Tranquility</h2>
-          <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, we&rsquo;ve imagined this place to be your comfortable home away from home. Spend your entire visit relaxing on our grounds, or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
+          <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, the motel is a comfortable home away from home. Spend your entire visit relaxing on our grounds, or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
         </div>
       </section>
       <section class="banner split reverse border">
