Updated aos.js settings
Replaced fade-left and fade-right with fade-up to prevent mobile horizontal scrolling issue. Updated version number.

--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -93,19 +93,19 @@
         </div>
       </section>
       <section id="content" class="banner split border">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="../assets/images/about-01-1x.jpg" srcset="../assets/images/about-01-1x 1x, ../assets/images/about-01-2x.jpg 2x" alt="A hammock and a couple of chairs on a screened-in porch">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2>Tranquility</h2>
           <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, the motel is a comfortable home away from home. Spend your entire visit relaxing on our grounds, or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-left">
+        <figure data-aos="fade-up">
           <img src="../assets/images/tgc-pool-1x.jpg" srcset="../assets/images/tgc-pool-1x 1x, ../assets/images/tgc-pool-2x.jpg 2x" alt="Forested swimming pool with some old school inner tubes, deck chairs, and picnic tables">
         </figure>
-        <div class="text" data-aos="fade-right">
+        <div class="text" data-aos="fade-up">
           <h2>Comfort</h2>
           <p>We&rsquo;re situated on two spacious forested acres featuring a swimming pool, hammocks, fire pits, picnic areas, and plenty of space to relax. Nestled right between Maine&rsquo;s eastern coastline and western mountains, The Pine Tree Motel is a perfect place to stay through all four seasons.</p>
         </div>
