--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -94,28 +94,28 @@
         </div>
       </section>
       <section id="content" class="banner split border">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2 class="visuallyhidden">Calm</h2>
           <p>Minimalist interiors enable impeccable cleanliness and a sense of calm.</p>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-left">
+        <figure data-aos="fade-up">
           <img src="../assets/images/stay-02-1x.jpg" srcset="../assets/images/stay-02-1x 1x, ../assets/images/stay-02-2x.jpg 2x" alt="Cozy pillows on a chair">
         </figure>
-        <div class="text" data-aos="fade-right">
+        <div class="text" data-aos="fade-up">
           <h2 class="visuallyhidden">Comfort</h2>
           <p>Our rooms and amenities are designed to provide refreshing tranquility. A minibar is curated to address a variety of thirst and snack needs.</p>
         </div>
       </section>
       <section class="banner split border" style="align-items: flex-start;">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="../assets/images/hotel-vermont-1x.jpg" srcset="../assets/images/hotel-vermont-1x 1x, ../assets/images/hotel-vermont-2x.jpg 2x" alt="A  queen-sized bed with pillows">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2>Amenities</h2>
           <ul>
             <li>Complimentary high-speed wireless</li>
