--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -103,10 +103,10 @@
         </div>
       </section>
       <section id="content" class="banner split bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="../assets/images/eat-breakfast-01-1x.jpg" srcset="../assets/images/eat-breakfast-01-1x.jpg 1x, ../assets/images/eat-breakfast-01-2x.jpg 2x" alt="Delicious egg sandwich with ham and cheese on an english muffin">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2>Breakfast</h2>
           <small>Served 7am – 10am</small>
           <dl class="menu">
@@ -125,22 +125,22 @@
       </section>
       <section class="row golden left">
         <h2 class="visuallyhidden">Breakfast Pictures</h2>
-        <div class="column" data-aos="fade-right">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/tour-breakfast-1x.jpg" srcset="../assets/images/tour-breakfast-1x.jpg 1x, ../assets/images/tour-breakfast-2x.jpg 2x" alt="Muffins and scones on a tray">
           </figure>
         </div>
-        <div class="column" data-aos="fade-left">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/eat-coffee-1x.jpg" srcset="../assets/images/eat-coffee-1x.jpg 1x, ../assets/images/eat-coffee-2x.jpg 2x" alt="Freshly-brewed coffee and an enamel coffee mug that says Life Begins After Coffee">
           </figure>
         </div>
       </section>
       <section class="banner split reverse bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-left">
+        <figure data-aos="fade-up">
           <img src="../assets/images/eat-burgers-1x.jpg" srcset="../assets/images/eat-burgers-1x.jpg 1x, ../assets/images/eat-burgers-2x.jpg 2x" alt="Giant, juicy burgers with bacon and cheese">
         </figure>
-        <div class="text" data-aos="fade-right">
+        <div class="text" data-aos="fade-up">
           <h2>Lunch &amp; Dinner</h2>
           <small>Served 11am – 10pm</small>
           <dl class="menu">
@@ -161,22 +161,22 @@
       </section>
       <section class="row golden right">
         <h2 class="visuallyhidden">Lunch and Dinner Pictures</h2>
-        <div class="column" data-aos="fade-right">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/eat-salad-1x.jpg" srcset="../assets/images/eat-salad-1x.jpg 1x, ../assets/images/eat-salad-2x.jpg 2x" alt="Our salad with roasted tomatoes">
           </figure>
         </div>
-        <div class="column" data-aos="fade-left">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/eat-pizza-1x.jpg" srcset="../assets/images/eat-pizza-1x.jpg 1x, ../assets/images/eat-pizza-2x.jpg 2x" alt="Slices of our cheese pizza with robust tomato sauce, cheese, and basil">
           </figure>
         </div>
       </section>
       <section class="banner split bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="../assets/images/eat-beer-01-1x.jpg" srcset="../assets/images/eat-beer-01-1x.jpg 1x, ../assets/images/eat-beer-01-2x.jpg 2x" alt="Two glasses of freshly-brewed beers">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2>The Brewery</h2>
           <small>Served 11am – 10pm</small>
           <dl class="menu">
@@ -193,22 +193,22 @@
       </section>
       <section class="row golden left">
         <h2 class="visuallyhidden">Beer Pictures</h2>
-        <div class="column" data-aos="fade-right">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/eat-beer-02-1x.jpg" srcset="../assets/images/eat-beer-02-1x.jpg 1x, ../assets/images/eat-beer-02-2x.jpg 2x" alt="Glass of pilsner beer on a wooden table">
           </figure>
         </div>
-        <div class="column" data-aos="fade-left">
+        <div class="column" data-aos="fade-up">
           <figure>
             <img src="../assets/images/eat-beer-03-1x.jpg" srcset="../assets/images/eat-beer-03-1x.jpg 1x, ../assets/images/eat-beer-03-2x.jpg 2x" alt="Stout and IPA beer being enjoyed by friends">
           </figure>
         </div>
       </section>
       <section class="banner split reverse bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-left">
+        <figure data-aos="fade-up">
           <img src="../assets/images/tour-bar-1x.jpg" srcset="../assets/images/tour-bar-1x.jpg 1x, ../assets/images/tour-bar-2x.jpg 2x" alt="Espresso machine in a rustic shed setting">
         </figure>
-        <div class="text" data-aos="fade-right">
+        <div class="text" data-aos="fade-up">
           <h2>Coffee Shoppe</h2>
           <small>Available 6am – 10pm</small>
           <dl class="menu">
