--- a/demo/index.html
+++ b/demo/index.html
@@ -186,20 +186,20 @@
         </div>
       </section>
       <section class="banner split border">
-        <figure data-aos="fade-right">
+        <figure data-aos="fade-up">
           <img src="assets/images/tgc-room-1x.jpg" srcset="assets/images/tgc-room-1x 1x, assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
-        <div class="text" data-aos="fade-left">
+        <div class="text" data-aos="fade-up">
           <h2>Stay</h2>
           <p>Cozy and comfortable, our rooms offer a modern and warm atmosphere to relax and recharge.</p>
           <a class="button" href="stay/index.html">Our Rooms</a>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-left">
+        <figure data-aos="fade-up">
           <img src="assets/images/tour-pizza-1x.jpg" srcset="assets/images/tour-pizza-1x 1x, assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
         </figure>
-        <div class="text" data-aos="fade-right">
+        <div class="text" data-aos="fade-up">
           <h2>Eat &amp; Drink</h2>
           <p>Breakfast, lunch, dinner, and everything in between, as well as freshly-brewed beer and coffee available all day long.</p>
           <a class="button" href="eat/index.html">View Menus</a>
