Defect and style fixes and updates
Fixed issue with aos.js (class="aos-init aos-animate"); removed aos.js from cards; changed demo master media grid css by reducing media-query from 90rem to 72rem for width: 75% grid row; reset design system version to 2.4.3 (only update design system version with updates to the design system and not for the demo defects).

--- a/demo/activities/index.html
+++ b/demo/activities/index.html
@@ -95,7 +95,7 @@
         </div>
       </section>
       <section id="content" class="row wide">
-        <div class="media-grid-block" style="padding: 0;">
+        <div class="media-grid-block center" style="padding: 0;">
           <div class="media-grid-item" data-aos="fade-up">
             <figure>
               <img src="../assets/images/activities-02-1x.jpg" srcset="../assets/images/activities-02-1x.jpg 1x, ../assets/images/activities-02-2x.jpg 2x" alt="Group of people jogging in the morning">
@@ -143,7 +143,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../stay/index.html"><figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure></a>
@@ -153,7 +153,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../eat/index.html"><figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure></a>
@@ -163,7 +163,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../gather/index.html"><figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure></a>
