--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -132,22 +132,22 @@
       </section>
       <section class="banner bg-gray information" style="align-items: center;" data-aos="fade-up">
         <div class="text">
-          <h2 data-aos="fade-up" class="aos-init aos-animate">Important Information</h2>
-          <div data-aos="fade-up" class="aos-init aos-animate">
+          <h2 data-aos="fade-up">Important Information</h2>
+          <div data-aos="fade-up">
             <h3 style="padding: 1rem 0 0;">Check-In/Check-Out</h3>
             <p>Check-in is at 3:00 pm, check-out is at 11:00 am. There is a 24 hour cancellation policy unless otherwise specified.</p>
           </div>
-          <div style="padding: 2rem 0 0;" data-aos="fade-up" class="aos-init aos-animate">
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
           <div style="padding: 2rem 0 0;" data-aos="fade-up">
             <h3>Parking</h3>
             <p>On-site parking is free for one vehicle per room. Please contact us for additional parking information.</p>
             <p>We are also pleased to offer two complimentary 80A single-phase Tesla charging stations on the hotel property for use by hotel guests.</p>
           </div>
-          <div style="padding: 2rem 0 0;" data-aos="fade-up" class="aos-init aos-animate">
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
             <h3>Pets</h3>
             <p>We are happy to offer a limited number of pet-friendly rooms. Please be advised there is a deposit of $100 ($50 non-refundable) per day per pet. Service animals are always allowed free of charge. Please contact us directly to reserve a pet friendly room.</p>
           </div>
-          <div style="padding: 2rem 0 0;" data-aos="fade-up" class="aos-init aos-animate">
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
             <h3>Accessibility</h3>
             <p>The entire hotel is American Disabilities Act Compliant. ADA rooms are available upon request.</p>
           </div>
@@ -167,7 +167,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../eat/index.html"><figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure></a>
@@ -177,7 +177,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../gather/index.html"><figure>
               <img src="../assets/images/events-01-1x.jpg" srcset="../assets/images/events-01-1x.jpg 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure></a>
@@ -187,7 +187,7 @@
               <p class="icon"><a href="../gather/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../activities/index.html"><figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure></a>
