--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -245,7 +245,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../stay/index.html"><figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure></a>
@@ -255,7 +255,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../gather/index.html"><figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure></a>
@@ -265,7 +265,7 @@
               <p class="icon"><a href="../gather/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="../activities/index.html"><figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure></a>
