--- a/demo/index.html
+++ b/demo/index.html
@@ -207,7 +207,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="activities/index.html"><figure>
               <img src="assets/images/tgc-movies-1x.jpg" srcset="assets/images/tgc-movies-1x.jpg 1x, assets/images/tgc-movies-2x.jpg 2x" alt="Movie night at the Pine Tree Motel">
             </figure></a>
@@ -217,7 +217,7 @@
               <p class="icon"><a href="activities/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="gather/index.html"><figure>
               <img src="assets/images/events-01-1x.jpg" srcset="assets/images/events-01-1x.jpg 1x, assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure></a>
@@ -227,7 +227,7 @@
               <p class="icon"><a href="gather/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade">
+          <div class="card">
             <a href="https://visitmaine.com/" target="_blank"><figure>
               <img src="assets/images/location-01-1x.jpg" srcset="assets/images/location-01-1x.jpg 1x, assets/images/location-01-2x.jpg 2x" alt="Costal bay scene">
             </figure></a>
