--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -88,7 +88,7 @@
       <section class="banner tall left dark bg-photo center fixed about">
         <div class="overlay" style="opacity: 0.5;"></div>
         <div class="text" style="align-items: center;" data-aos="fade-up">
-          <h1 class="center">The Simple Life</h1>
+          <h1 class="center">About The Pine Tree Motel</h1>
           <p class="center">Inspired by the classic American roadside motor lodge, The Pine Tree Motel is a comfortable, contemporary, and relaxing anytime getaway.</p>
         </div>
       </section>
