--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -146,11 +146,11 @@
           <dl class="menu">
             <dt>Pizza<span>15</span></dt>
             <dd>Cheese or pepperoni</dd>
-            <dt>Burger &amp; Fries<span>15</span></dt>
+            <dt>Burger<span>15</span></dt>
             <dd>Grass-feed beef, cheese, and more on a brioche roll with hand-cut Maine potato fries</dd>
             <dt>Panini<span>15</span></dt>
             <dd>Chicken and cheese or tomato and cheese with hand-cut Maine potato fries</dd>
-            <dt>The Salad<span>10</span></dt>
+            <dt>Salad<span>10</span></dt>
             <dd>Tomatoes, arugula, and mozzarella</dd>
             <dt>Tacos<span>10</span></dt>
             <dd>Grilled chicken, cheese, and arugula</dd>
@@ -215,15 +215,13 @@
             <dt>Latte<span>4</span></dt>
             <dt>Americano<span>3</span></dt>
             <dt>Cappuccino<span>4</span></dt>
-            <dt>Espresso<span>4</span></dt>
+            <dt>Espresso<span>3</span></dt>
             <dt>Macchiato<span>4</span></dt>
             <dt>Chai<span>4</span></dt>
             <dt>Brewed Coffee<span>3</span></dt>
             <dd>Hot or iced, regular or decaf</dd>
-            <dt>Hot Tea<span>3</span></dt>
-            <dd>Black or green tea</dd>
-            <dt>Iced Tea<span>4</span></dt>
-            <dd>Black or green</dd>
+            <dt>Tea<span>4</span></dt>
+            <dd>Hot or iced, black or green</dd>
             <dt>Arnold Palmer<span>5</span></dt>
             <dd>Black iced tea and lemonade</dd>
             <dt>Robert Palmer<span>5</span></dt>
