--- a/demo/gather/index.html
+++ b/demo/gather/index.html
@@ -107,7 +107,7 @@
             </figure>
             <div class="text">
               <h2>Meetings</h2>
-              <p>Great for meetings large and small, our comfortable spaces allow you to focus, relax, and be yourself. We can provide audio visual capability, catering from our own kitchen, as well as overnight accommodations for your guests.</p>
+              <p>Great for meetings large and small, our comfortable spaces allow you to focus, relax, and get stuff done. We can provide audio visual capability, catering from our own kitchen, as well as overnight accommodations for your guests.</p>
               <p style="line-height: 1.25;"><small>To book a meeting, please email us at <a href="#!">meet@thepinetreemotel.com</a>.</small></p>
             </div>
           </div>
