--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -96,7 +96,7 @@
         <h2>Aspect Ratio</h2>
         <p>In keeping with other features of this design system, we believe that images should be sized and cropped according to the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>.</p>
         <figure>
-          <img src="../../assets/images/montreal-2x.jpg" srcset="../../assets/images/montreal-1x.jpg 1x, ../../assets/images/montreal-2x.jpg 2x" alt="Example of horizontal golden aspect ratio image" style="max-height: 20rem;">
+          <img src="../../assets/images/montreal-2x.jpg" srcset="../../assets/images/montreal-1x.jpg 1x, ../../assets/images/montreal-2x.jpg 2x" alt="Example of horizontal golden aspect ratio image">
           <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/montreal-75" target="_blank">Montreal by Luke Chesser</a></cite></figcaption>
         </figure>
       </section>
