Updated index, badges, downloads, and bannrrs
Added demo and Sketch library to system index/home page; updated badges styles to enable use with h tags; updated padding for split banners (should've been 2rem around all 4 sides); updated copy on Downloads page; other small error corrections.

--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -113,13 +113,13 @@
           <div class="card">
             <div class="text">
               <h3>Icons</h3>
-              <p class="icon"><a href="https://remixicon.com/" target="_blank">Remix Icon<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+              <p class="icon"><a href="https://remixicon.com/" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
           <div class="card">
             <div class="text">
               <h3>Sketch File</h3>
-              <p class="icon"><a href="https://sketch.cloud/s/zZqmy" target="_blank">View on Sketch Cloud<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+              <p class="icon"><a href="https://sketch.cloud/s/dvOG2" target="_blank">Download<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
         </div>
