--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -123,7 +123,7 @@
           <p><cite>Photo: <a href="https://www.stockio.com/free-photo/london-235" target="_blank">London</a> by Richard Tilney-Basset</cite></p>
         </div>
       </section>
-      <section class="row wide" style="padding: 2rem;">
+      <section class="row wide">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
         <figure style="padding: 0;">
           <figcaption>html</figcaption>
@@ -147,7 +147,7 @@
           <p>Banners are a key visual organism in the Delta Design System. This is a split banner.</p>
         </div>
       </section>
-      <section class="row wide" style="padding: 2rem;">
+      <section class="row wide" style="padding: 0 2rem 2rem;">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
         <figure style="padding: 0;">
           <figcaption>html</figcaption>
