--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -229,7 +229,7 @@
           <div class="column">
             <figure>
               <figcaption>html</figcaption>
-<pre style="white-space: normal;"><code>&lt;p class=&quot;icon&quot; style=&quot;padding: 0;&quot;&gt;&lt;a href=&quot;#!&quot;&gt;Read more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;</code></pre>
+<pre style="white-space: normal;"><code>&lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;#!&quot;&gt;Read more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;</code></pre>
             </figure>
           </div>
         </div>
