--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <section class="skip">
+      <h1 class="visuallyhidden">Skip to Content</h1>
       <a href="#content">Skip to Content</a>
     </section>
     <header>
@@ -199,7 +200,7 @@
           <img src="assets/images/demo-mockup-01-1x.png" srcset="assets/images/demo-mockup-01-1x.png 1x, assets/images/demo-mockup-01-2x.png 2x" alt="Demo site mockup on an iPad">
         </figure>
         <div class="text">
-          <h2><div class="badge"><span class="bg-primary">New</span></div>Demo Site</h2>
+          <h2><span class="badge"><span class="bg-primary">New</span></span>Demo Site</h2>
           <p>I've created a demo site to demonstrate how easy it is to design with the Delta Design System.</p>
           <p class="icon"><a href="https://cdfournier.github.io/delta-design-system/demo/index.html" target="_blank">Check it out<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
         </div>
@@ -209,7 +210,7 @@
           <img src="assets/images/sketch-mockup-01-1x.png" srcset="assets/images/sketch-mockup-01-1x.png 1x, assets/images/sketch-mockup-01-2x.png 2x" alt="Sketch library on MacBook Pro">
         </figure>
         <div class="text">
-          <h2><div class="badge"><span class="bg-primary">Updated</span></div>Sketch Library</h2>
+          <h2><span class="badge"><span class="bg-primary">Updated</span></span>Sketch Library</h2>
           <p>Download the updated Sketch library with an improved component symbol system and a page of examples based on the designs for the new demo.</p>
           <p class="icon"><a href="https://sketch.cloud/s/dvOG2" target="_blank">Download<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
         </div>
