--- a/demo/index.html
+++ b/demo/index.html
@@ -187,7 +187,7 @@
       </section>
       <section class="banner split border">
         <figure data-aos="fade-up">
-          <img src="assets/images/tgc-room-1x.jpg" srcset="assets/images/tgc-room-1x 1x, assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
+          <img src="assets/images/tgc-room-1x.jpg" srcset="assets/images/tgc-room-1x.jpg 1x, assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
         <div class="text" data-aos="fade-up">
           <h2>Stay</h2>
