--- a/molecules/pagination-d/pagination.html
+++ b/molecules/pagination-d/pagination.html
@@ -93,6 +93,7 @@
       <section class="row wide">
         <h1 class="title">Pagination</h1>
         <p>Pagination is used to provide navigation for a series of related content exists across multiple pages.</p>
+        <p><small><strong>This molecule has been deprecated</strong></small></p>
         <p>According to the <a href="https://a11y-style-guide.com/style-guide/section-navigation.html#kssref-navigation-pagination" target="_blank">A11Y Style Guide</a>, pagination links should be placed inside a <code>&lt;nav&gt;</code> tag whenever possible. The markup should include an <code>aria-label=&quot;pagination&quot;</code> to describe the type of navigation, and you should add <code>aria-current=&quot;page&quot;</code> to the link that points to the current page. Lastly, add a <code>aria-disabled=&quot;true&quot;</code> for any link that is disabled.</p>
         <h2>Pagination Structure</h2>
         <p>In addition to using a <code>&lt;nav&gt;</code> tag with pagination, we also place these links inside an unordered list (<code>&lt;ul&gt;</code>). The pagination block is horizontally centered by default, but if you'd prefer to see it aligned horizontally on the left, just add a <code>.left</code> class to the <code>&lt;nav class=&quot;pagination&quot;&gt;</code> tag.</p>
