--- a/molecules/molecules.html
+++ b/molecules/molecules.html
@@ -153,12 +153,14 @@
               <p class="icon"><a href="messages/messages.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
+<!--      DEPRECATED
           <div class="card">
             <div class="text">
               <h3>Pagination</h3>
               <p class="icon"><a href="pagination/pagination.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
+-->
           <div class="card">
             <div class="text">
               <h3>Search</h3>
